# FreezingEffect

./: .gitignore  README.md  get_mask_figure.ipynb  pyproject.toml  selection_of_ROIs.ipynb  show_the_ROIs_on_propagated_imgs.ipynb  test.pickle
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
results/comparaison/: azimuth_prism_cv.xlsx  depolarization_prism.xlsx  depolarization_prism_cv.xlsx  retardance_prism.xlsx  retardance_prism_cv.xlsx  statistical_test.xlsx  statistical_test_cv.xlsx
results/comparaison/GM/azimuth/: max_normalized.xlsx  max_raw_data.xlsx  mean_normalized.xlsx  mean_raw_data.xlsx  median_normalized.xlsx  median_raw_data.xlsx
results/comparaison/GM/depolarization/: max_normalized.xlsx  max_raw_data.xlsx  mean_normalized.xlsx  mean_raw_data.xlsx  median_normalized.xlsx  median_raw_data.xlsx
results/comparaison/GM/diattenuation/: max_normalized.xlsx  max_raw_data.xlsx  mean_normalized.xlsx  mean_raw_data.xlsx  median_normalized.xlsx  median_raw_data.xlsx
results/comparaison/GM/retardance/: max_normalized.xlsx  max_raw_data.xlsx  mean_normalized.xlsx  mean_raw_data.xlsx  median_normalized.xlsx  median_raw_data.xlsx
results/comparaison/WM/azimuth/: max_normalized.xlsx  max_raw_data.xlsx  mean_normalized.xlsx  (+2 more)
src/freezingeffect/: __init__.py  automatic_ROI_propagation.py  collect_data_propagated.py  helpers.py  parameter_comparaison.py  selection_of_ROIs.py
src/freezingeffect/data/: histogram_parameters.json  parameters.json  polarimetric_parameters.txt  polarimetric_parameters_link.json
src/freezingeffect/temp/: image_path.txt
(+32 files in other folders)
